<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.project3.project3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Programming Quiz"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            style="@style/styleQuesTV"
            android:text="@string/ques1"
            android:id="@+id/tv_q_1"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radiogroup1">

            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques1_radio1"
                android:onClick="checkedQues1"
                android:id="@+id/rb1_q_1"
            />
            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques1_radio2"
                android:onClick="checkedQues1"
                android:id="@+id/rb2_q_1"
                />
            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques1_radio3"
                android:onClick="checkedQues1"
                android:id="@+id/rb3_q_1"
                />
        </RadioGroup>
        <TextView
            style="@style/styleQuesTV"
            android:text="@string/ques2"
            android:id="@+id/tv_q_2"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radiogroup2">

            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques2_radio1"
                android:onClick="checkedQues2"
                android:id="@+id/rb1_q_2"
                />
            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques2_radio2"
                android:onClick="checkedQues2"
                android:id="@+id/rb2_q_2"
                />

        </RadioGroup>

        <TextView
            style="@style/styleQuesTV"
            android:text="@string/ques3"
            android:id="@+id/tv_q_3"
            />
        <CheckBox
            style="@style/styleCheckbox"
            android:text="@string/checkbox1_ques3"
            android:onClick="checkedQues3"
            android:id="@+id/cb1_q3"/>
        <CheckBox
            style="@style/styleCheckbox"
            android:text="@string/checkbox2_ques3"
            android:onClick="checkedQues3"
            android:id="@+id/cb2_q3"/>
        <CheckBox
            style="@style/styleCheckbox"
            android:text="@string/checkbox3_ques3"
            android:onClick="checkedQues3"
            android:id="@+id/cb3_q3"/>
        <CheckBox
            style="@style/styleCheckbox"
            android:text="@string/checkbox4_ques3"
            android:onClick="checkedQues3"
            android:id="@+id/cb4_q3"/>
        <TextView
            style="@style/styleQuesTV"
            android:text="@string/ques4"
            android:id="@+id/tv_q_4"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ET_ques4"
            />
        <TextView
            style="@style/styleQuesTV"
            android:text="@string/ques5"
            android:id="@+id/tv_q_5"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radiogroup3">

            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques5_radio1"
                android:onClick="checkedQues5"
                android:id="@+id/rb1_q_5"
                />
            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques5_radio2"
                android:onClick="checkedQues5"
                android:id="@+id/rb2_q_5"
                />
            <RadioButton
                style="@style/styleRadioButton"
                android:text="@string/ques5_radio3"
                android:onClick="checkedQues5"
                android:id="@+id/rb3_q_5"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textSize="20sp"
        android:onClick="submitButton"
        android:id="@+id/submit_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:textSize="20sp"
                android:onClick="resetButton"
                android:id="@+id/reset_button"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
